feat: Rename project and update AI model interaction
Updates the project name from "provador-virtual-meulookmamãe" to "provador-virtual" across configuration files and the main application title.

Refactors the `geminiService.ts` to improve API key handling and allows passing a `pose` parameter to the `generateModelImage` function, enhancing model customization. The service now returns both the base64 image data and its MIME type.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "provador-virtual-meulookmamãe",
+  "name": "provador-virtual",
   "private": true,
   "version": "0.0.0",
   "type": "module",
